--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@angular/platform-browser-dynamic": "~11.1.2",
     "@angular/router": "~11.1.2",
     "hammerjs": "^2.0.8",
-    "rxjs": "~6.6.0",
+    "rxjs": "^6.6.6",
+    "rxjs-compat": "^6.6.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
